--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header class="header">
       <div class="header__inner container container--header">
-        <a href="/" class="header__logo logo">Фотограф</a>
+        <a href="#" class="header__logo logo">Фотограф</a>
         <div class="header__menu menu">
           <button
             type="button"
