--- a/index.html
+++ b/index.html
@@ -111,42 +111,42 @@
               <article class="portfolio__card card-portfolio card-portfolio--1">
                 <h3 class="card-portfolio__title">Свадбеная фотосессия</h3>
                 <div class="card-portfolio__price">от 3000 ₽</div>
-                <a href="/" class="card-portfolio__link"></a>
+                <a href="#" class="card-portfolio__link"></a>
               </article>
             </li>
             <li class="portfolio__item">
               <article class="portfolio__card card-portfolio card-portfolio--2">
                 <h3 class="card-portfolio__title">Фотографии беременных</h3>
                 <div class="card-portfolio__price">от 3000 ₽</div>
-                <a href="/" class="card-portfolio__link"></a>
+                <a href="#" class="card-portfolio__link"></a>
               </article>
             </li>
             <li class="portfolio__item">
               <article class="portfolio__card card-portfolio card-portfolio--3">
                 <h3 class="card-portfolio__title">Детская фотосъемка</h3>
                 <div class="card-portfolio__price">от 3000 ₽</div>
-                <a href="/" class="card-portfolio__link"></a>
+                <a href="#" class="card-portfolio__link"></a>
               </article>
             </li>
             <li class="portfolio__item">
               <article class="portfolio__card card-portfolio card-portfolio--4">
                 <h3 class="card-portfolio__title">Семейная фотосессия</h3>
                 <div class="card-portfolio__price">от 3000 ₽</div>
-                <a href="/" class="card-portfolio__link"></a>
+                <a href="#" class="card-portfolio__link"></a>
               </article>
             </li>
             <li class="portfolio__item">
               <article class="portfolio__card card-portfolio card-portfolio--5">
                 <h3 class="card-portfolio__title">Фотографии еды</h3>
                 <div class="card-portfolio__price">от 3000 ₽</div>
-                <a href="/" class="card-portfolio__link"></a>
+                <a href="#" class="card-portfolio__link"></a>
               </article>
             </li>
             <li class="portfolio__item">
               <article class="portfolio__card card-portfolio card-portfolio--6">
                 <h3 class="card-portfolio__title">Эстрадная фотосъемка</h3>
                 <div class="card-portfolio__price">от 3000 ₽</div>
-                <a href="/" class="card-portfolio__link"></a>
+                <a href="#" class="card-portfolio__link"></a>
               </article>
             </li>
           </ul>
